maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:10: error: not found: value Angle
 while(Angle==false){
       ^PledgeMaze:39: error: not found: value Angle
      Angle=true
      ^PledgeMaze:41: error: not found: value Angle
      Angle=false
      ^