maze.pledge.PledgeMaze.scala.code
override def run() {
 var sommeAngle:Int=0 
 var dir:Direction=getDirection()
 
  
 trouverNord()
 droite()
 
 while(Angle==false){
    keepHandOnSideWall()
    if(getDirection()!=dir){
      if(dir==Direction.NORTH && getDirection==Direction.EAST){
        sommeAngle-=1
      }
      else if(dir==Direction.NORTH && getDirection==Direction.WEST){
        sommeAngle+=1
      }
      else if(dir==Direction.SUD && getDirection==Direction.EAST){
        sommeAngle+=1
      }
      else if(dir==Direction.SUD && getDirection==Direction.WEST){
        sommeAngle-=1
      } else  if(dir==Direction.EST && getDirection==Direction.NORTH){
        sommeAngle+=1
      }
      else if(dir==Direction.EST && getDirection==Direction.SOUTH){
        sommeAngle-=1
      }
      else if(dir==Direction.WEST && getDirection==Direction.NORTH){
        sommeAngle-=1
      }
      else if(dir==Direction.WEST && getDirection==Direction.SOUTH){
        sommeAngle+=1
      }
    }

    if (sommeAngle==0){
      Angle=true
    }else{
      Angle=false
    }
	}

}

def trouverNord(){
  var y:Int=getY()
	while(estFaceMur()==false){
    setDirection(Direction.NORTH)
    if(estFaceMur()==true){
      droite()
      if(estFaceMur()==true){
        gauche()
        gauche()
      }
      
      avance()
      setDirection(Direction.NORTH)
    }else{
      avance()
    }
   y=getY() 
  }   
  
}

def keepHandOnSideWall(){
	
   
      if(estFaceMur()==true){
        droite()

        if(estFaceMur()==true){
          gauche()
        }else{
          avance()
          gauche()
          while(estFaceMur()==false){
            avance()
            gauche()
           
        }

        }

      }else{
        avance()
        gauche()
        while(estFaceMur()==false){
          avance()
          gauche()
          
        }

        while(estFaceMur()==true){
          droite()
          
        }

    }
  
    
}






